--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Push Notifications Using Node</title>
+  <title>SSH Authenticator</title>
 </head>
 
 <body>
-  <h1>Push Notifications Using Node</h1>
+  <h1>SSH Authenticator</h1>
 
   <script src="client.js"></script>
 </body>
